--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,15 @@
-.App {
+
+ .logo {
+  height: 32px;
   text-align: center;
+  margin: 16px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+
+.dashmenu , .dashitems {
+  background: #19323C !important
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.ant-layout-sider-trigger {
+  background: #F2545B !important;
 }
